feat: Add dynamic pattern matching for GuildMessageFilterFeature